			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard

30-Apr-2005
~~~~~~~~~~~
Added Brazilian Portuguese translation (Jose Carlos).
Bugfix: Don't refuse to start if the new Environment file doesn't exist
	(Thomas Leonard).

10-Apr-2005
~~~~~~~~~~~
Provide a way to set up a user's environment in general (Stephen Watson).

04-Mar-2005
~~~~~~~~~~~
Set $BROWSER to ROX-Session/browser on login. This is a script that runs your
configured web-browser ($XDG_CONFIG_DIRS/rox.sourceforge.net/handlers/BROWSER),
or picks a suitable default if none is set (Thomas Leonard).

22-Jan-2005
~~~~~~~~~~~
Allow setting keyboard LEDs (Caps lock, Num lock, Scroll lock) on login (Guido
Schimmes). This is used by Keyboard, a configuration application.

23-Dec-2004
~~~~~~~~~~~
Added Chinese translation (Babyfai Cheung).

23-Oct-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

15-Oct-2004
~~~~~~~~~~~
Allow Xcursor code to compile under GLib 2.2 (Stephen Watson).

06-Sep-2004 (Release 0.1.25)
~~~~~~~~~~~
Use new ROX-Lib system for getting root access (Thomas Leonard).

30-Aug-2004
~~~~~~~~~~~
Added support for changing Xcursor theme and size (Guido Schimmels; code from
GNOME).

25-Aug-2004
~~~~~~~~~~~
Give a more helpful message if the backup xsession file already exists
(requested by Nils-Erik Svangård).

14-Aug-2004 (Release 0.1.24)
~~~~~~~~~~~
Added support for D-BUS 0.22; 0.20 and 0.21 are still supported (Thomas
Leonard).

08-Aug-2004
~~~~~~~~~~~
Added support for switching mouse button order for left-handed use (Guido
Schimmels; code from GNOME).

22-Jul-2004
~~~~~~~~~~~
Compatability fixes: /bin/sh behaviour, DPMS, availability of long options
(Stephen Watson).

01-Jul-2004
~~~~~~~~~~~
Message log sizing/positioning code takes Xinerama into account and window is
now a top-level window instead of a dialogue (Tony Houghton).

Provides options for DPMS and keyboard auto-repeat, which can be set via
exteral applications (Tony Houghton).
